WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50935
Crash when clicking a download link that targets a new tab
https://bugs.webkit.org/show_bug.cgi?id=50935
Summary
Crash when clicking a download link that targets a new tab
Anders Carlsson
Reported
2010-12-13 10:08:03 PST
Crash when clicking a download link that targets a new tab
Attachments
Patch
(1.61 KB, patch)
2010-12-13 10:09 PST
,
Anders Carlsson
sullivan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2010-12-13 10:09:25 PST
<
rdar://problem/8760572
>
Anders Carlsson
Comment 2
2010-12-13 10:09:51 PST
Created
attachment 76402
[details]
Patch
John Sullivan
Comment 3
2010-12-13 10:24:34 PST
Comment on
attachment 76402
[details]
Patch r+ for the crash fix. Will this function return the wrong result in the new-tab case? If so, that should have a separate bug report (maybe it already does?).
Anders Carlsson
Comment 4
2010-12-13 10:28:37 PST
Committed
r73929
: <
http://trac.webkit.org/changeset/73929
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug