Crash when clicking a download link that targets a new tab https://bugs.webkit.org/show_bug.cgi?id=50935 <rdar://problem/8760572>

Reviewed by John Sullivan.

Check for a null history item.

* WebProcess/Downloads/mac/DownloadMac.mm:
(WebKit::originatingURLFromBackForwardList):

Canonical link: https://commits.webkit.org/64288@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73929 268f45cc-cd09-0410-ab3c-d52691b4dbfc