WebKit2/WebProcess/Downloads/mac/DownloadMac.mm
@@ -68,7 +68,11 @@ static KURL originatingURLFromBackForwardList(WebPage *webPage)
     for (int backIndex = 0; backIndex <= backCount; backIndex++) {
         // FIXME: At one point we had code here to check a "was user gesture" flag.
         // Do we need to restore that logic?
-        originalURL = page->backForward()->itemAtIndex(-backIndex)->originalURL(); 
+        HistoryItem *historyItem = page->backForward()->itemAtIndex(-backIndex);
+        if (!historyItem)
+            continue;
+
+        originalURL = historyItem->originalURL(); 
         if (!originalURL.isNull()) 
             return originalURL;
     }
